bppackaging/src/objects/CO_Invoice_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>CO Invoice Payments</relationshipLabel>
        <relationshipName>CO_Invoice_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reverse_Link__c</fullName>
        <label>Reverse Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Payment_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Payment From</label>
        <referenceTo>CO_Invoice_Payment__c</referenceTo>
        <relationshipLabel>CO Invoice Payments</relationshipLabel>
        <relationshipName>CO_Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CO Invoice Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COIP-{00000000}</displayFormat>
        <label>CO Invoice Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>